# qshield

./: .gitignore  README.md  build.sbt  qshield
core/: build.sbt
core/src/enclave/App/: App.cpp
core/src/enclave/Common/: common.h
core/src/enclave/Enclave/: ACPolicyApplied.h  CMakeLists.txt  Crypto.cpp  Crypto.h  QAggregate.cpp  QCrypto.cpp  QFilter.h  QJoin.h  QProject.cpp  ResPrepared.cpp  ResPrepared.h
core/src/native/: CMakeLists.txt
core/src/native/App/: CMakeLists.txt
core/src/native/Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp  Flatbuffers.h  QAggregate.h  QCrypto.h  QFlatbuffersReaders.cpp  QJoin.cpp  QProject.h
data-owner/: build.sbt
data-owner/src/main/scala/: Test.scala
data-owner/src/native/: CMakeLists.txt  QSP.h  QServiceProvider.cpp  QServiceProvider.h  QServiceProviderJNI.cpp  ServiceProvider.h  ServiceProviderJNI.cpp
data-user/: build.sbt
data-user/src/flatbuffers/: QShield.fbs
data/bdb/uservisits/big/: 000037_0.csv
data/bdb/uservisits/medium/: 000009_0.csv
dev/env/: development_setup  profile
dev/uml/: benchmark.pu  core.pu  execution.pu  logical.pu  rule[logical].pu  strategy[execution].pu  uml.puml  util.pu
exp/: dag_drawer.py  drawer.py  query_drawer.py  unlock_drawer.py
exp/dag/dag/dag/: Match.h
exp/dag/tests/: unittest.cpp
exp/exp_res/cryptdb/: cdb_test.cc
exp/exp_res/cryptdb/eval/res/: q1.txt  q2.txt  q3.txt  rankings_insert.txt  uservisits_insert.txt
exp/exp_res/cryptdb/eval/schema/: rankings.sql  uservisits.sql
exp/exp_res/cryptdb/res/big/: q1.txt  q1_mean.txt  q2.txt  q3.txt  q3_mean.txt
exp/exp_res/cryptdb/res/medium/: q1.txt  q1_mean.txt  q2.txt  q2_mean.txt  q3.txt  q3_mean.txt
exp/exp_res/cryptdb/res/tiny/: q1.txt  q2.txt  q2_mean.txt  q3.txt  q3_mean.txt
exp/exp_res/dag/raw_logs/: log_1  log_10  log_11  log_12  log_13  log_14  log_15  log_17  log_18  log_19  log_2  log_20  log_3  log_4  log_5  log_6  log_7  log_8  log_9
exp/exp_res/dag/res/: dag_matching  dag_matching_mean  dag_updating  dag_updating_mean
exp/exp_res/opaque/raw_logs/: log_1  log_10  log_2  log_3  log_4  log_5  log_6  log_7  log_8  log_9
exp/exp_res/opaque/raw_logs/big/: log_1  log_10  log_2  log_3  log_4  log_5  log_6  log_7  log_8  log_9
exp/exp_res/opaque/raw_logs/medium/: log_1  log_10  log_2  log_3  log_4  log_5  log_6  log_7  log_8  log_9
exp/exp_res/qshield/ac/: e_drawer_time.py  e_sgx_dec.txt  sgx_dec.txt
exp/exp_res/qshield/raw_logs/: log_1  log_10  log_2  log_3  log_4  log_5  log_6  log_7  log_8  log_9
opaque-ext/: build.sbt
opaque-ext/outsourced/RANKINGS/: .schema.crc  schema
opaque-ext/outsourced/RANKINGS/data/: .part-00000.crc  part-00000
opaque-ext/outsourced/USERVISITS/: .schema.crc  schema
opaque-ext/outsourced/USERVISITS/data/: .part-00000.crc
opaque-ext/src/enclave/: CMakeLists.txt
opaque-ext/src/enclave/App/: App.cpp  CMakeLists.txt  QShieldSGXEnclave.h
opaque-ext/src/enclave/Common/: common.h
opaque-ext/src/enclave/Enclave/: ACPolicyApplied.cpp  CMakeLists.txt  Crypto.cpp  Enclave.config.xml  Enclave.cpp  Enclave.edl  FlatbuffersWriters.h  QAggregate.cpp  QCrypto.cpp  QCrypto.h  QFilter.cpp  QFlatbuffersReaders.cpp  QFlatbuffersReaders.h  QFlatbuffersWriters.cpp  QFlatbuffersWriters.h  QJoin.cpp  QProject.cpp  QSort.cpp  QSort.h  key.cpp  qdebug.h.in
opaque-ext/src/flatbuffers/: QShield.fbs
owner/: build.sbt
owner/src/native/: CMakeLists.txt  QSP.h  QServiceProvider.cpp  QServiceProvider.h  SP.h  ServiceProvider.cpp  json.hpp
project/: Build.scala  BuildType.scala  plugins.sbt
rest/: app.py  app.spec  config.py  coroweb.py  pymonitor.py  tools.py
rest-apis/: apis.py  app.py  app.spec  coroweb.py  field.py  format.py  gl.py  handlers.py
rest-apis/conf/: .config_override.py.swp  config_default.py  config_override.py
rest-apis/models/mysql/: models.py  orm.py
rest-apis/models/qshield/: models.py  orm.py
rest-apis/timers/: PipelineTimer.py
rest/models/qshield/: models.py  orm.py
rest/test/: api_test.py
rest/timers/: BaseTimer.py
templates/: apis.html  default.html
tpl/e-scheme/: Makefile.am  configure.ac  e-scheme.c  e-scheme.h
tpl/sgx-gmp/: sgx_tgmp.h
tpl/sgx-pbc/: configure.ac
user/: build.sbt
(+183 files in other folders)
